--- a/source/sass/blocks/image-uploads.scss
+++ b/source/sass/blocks/image-uploads.scss
@@ -31,96 +31,11 @@
     flex-flow: column wrap;
   }
 
-  & div {
-    flex-shrink: 0;
+  .image-uploads__image-wrapper {
     position: relative;
-    width: 205px;
-    height: 205px;
-    overflow: hidden;
-    margin-right: 23.5px;
-
-    border-radius: 5px;
-    box-shadow: 0px 2px 4px rgba(0, 30, 75, 0.15);
-    filter: drop-shadow(0px 2px 4px rgba(0, 30, 75, 0.15));
-
-    &:nth-of-type(5n) {
-      margin-right: 0;
-    }
-
-    @media (max-width: $tablet-width - 1) {
-      width: 100%;
-      height: calc(100vw / 2);
-      margin-right: 0;
-      margin-bottom: 24px;
-    }
-
-    & button[type="button"] {
-      position: absolute;
-      top: 4px;
-      right: 4px;
-      width: 28px;
-      height: 28px;
-
-      background-color: var(--color-bg-main, $white);
-      border: none;
-      border-radius: 5px;
-      outline: none;
-
-      cursor: pointer;
-
-      @media (max-width: $desktop-width - 1) {
-        top: 8px;
-        right: 8px;
-      }
-
-      &::before {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 15px;
-        height: 1px;
-
-        background-color: var(--color-interactive-accent, $red);
-
-        transform: translate(-50%, -50%) rotate(-45deg);
-        transition: background-color $style-change-duration;
-      }
-
-      &::after {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 15px;
-        height: 1px;
-
-        background-color: var(--color-interactive-accent, $red);
-
-        transform: translate(-50%, -50%) rotate(45deg);
-        transition: background-color $style-change-duration;
-      }
-
-      &:hover:not(.focus-visible) {
-        &::before,
-        &::after {
-          background-color: var(--color-interactive-accent, rgba($red, 0.5));
-        }
-      }
-    }
-  }
-
-  & img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-
-  & label {
-
     display: flex;
     align-items: center;
+    margin-right: 23.5px;
 
     width: 205px;
     height: 205px;
@@ -132,13 +47,35 @@
     text-align: center;
     color: var(--color-text, $grey-default);
 
-    border: 2px dashed var(--color-stroke, $light-grey);
     border-radius: 5px;
 
-    cursor: pointer;
     transition: opacity $style-change-duration;
 
-    &:hover:not(.focus-visible) {
+    &:first-child {
+      display: flex;
+    }
+
+    &:not(.image-loaded) {
+      border: 2px dashed var(--color-stroke, $light-grey);
+    }
+
+    &.image-loaded {
+      display: flex;
+
+      span {
+        display: none;
+      }
+
+      input {
+        pointer-events: none;
+      }
+    }
+
+    &:nth-child(5n) {
+      margin-right: 0;
+    }
+
+    &:hover:not(.focus-visible):not(.image-loaded) {
       opacity: 0.8;
     }
 
@@ -150,9 +87,28 @@
       justify-content: center;
     }
 
+    input[type="file"].visually-hidden {
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+
+      width: 100%;
+      height: 100%;
+
+      opacity: 0;
+
+      clip-path: unset;
+      clip: unset;
+
+      cursor: pointer;
+    }
+
     & span {
       padding-top: 34px;
       position: relative;
+      pointer-events: none;
+      z-index: 0;
 
       @media (max-width: $tablet-width - 1) {
         max-width: 50%;
@@ -170,5 +126,91 @@
         font-weight: 200;
       }
     }
+
+    &.image-loaded {
+      flex-shrink: 0;
+      position: relative;
+      width: 205px;
+      height: 205px;
+      overflow: hidden;
+      // margin-right: 23.5px;
+
+      // border-radius: 5px;
+      box-shadow: 0px 2px 4px rgba(0, 30, 75, 0.15);
+      filter: drop-shadow(0px 2px 4px rgba(0, 30, 75, 0.15));
+
+      &:nth-of-type(5n) {
+        margin-right: 0;
+      }
+
+      @media (max-width: $tablet-width - 1) {
+        width: 100%;
+        height: calc(100vw / 2);
+        margin-right: 0;
+        margin-bottom: 24px;
+      }
+
+      & button[type="button"] {
+        position: absolute;
+        top: 4px;
+        right: 4px;
+        width: 28px;
+        height: 28px;
+
+        background-color: var(--color-bg-main, $white);
+        border: none;
+        border-radius: 5px;
+        outline: none;
+
+        cursor: pointer;
+
+        @media (max-width: $desktop-width - 1) {
+          top: 8px;
+          right: 8px;
+        }
+
+        &::before {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: 15px;
+          height: 1px;
+
+          background-color: var(--color-interactive-accent, $red);
+
+          transform: translate(-50%, -50%) rotate(-45deg);
+          transition: background-color $style-change-duration;
+        }
+
+        &::after {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: 15px;
+          height: 1px;
+
+          background-color: var(--color-interactive-accent, $red);
+
+          transform: translate(-50%, -50%) rotate(45deg);
+          transition: background-color $style-change-duration;
+        }
+
+        &:hover:not(.focus-visible) {
+          &::before,
+          &::after {
+            background-color: var(--color-interactive-accent, rgba($red, 0.5));
+          }
+        }
+      }
+    }
+  }
+
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
   }
 }
